ns/manserfam/prewedding/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prewedding
  namespace: manserfam
spec:
  ports:
  - port: 80
    name: http
    targetPort: prewedding
  selector:
    app: prewedding
